# rust-hello-world

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  cargo.old.toml  cargo.toml  readme.md
src/: main.rs
