[package]
name = "server"
version = "0.1.0"
authors = [ "Gary Ascuy <gary.ascuy@gmail.com>" ]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.4"
cargo-watch = "7.3.0"
cargo-edit = "0.6.0"

[profile.dev]
panic = "abort"

[docker]
name = "server"
version = "1.0.0"
maintainer = "Gary Ascuy <gary.ascuy@gmail.com>"
temp_folder = "./.tmp_docker"
tag = "garyascuy/cargo-rocket-example"
